==> 519Moodlight/519Moodlight.github.io/pico4ML-persondetection/include/ICM20948/ICM20948.cpp <==
#include "ICM20948.h"
#include <hardware/gpio.h>
#define I2C_PORT i2c0

char ICM20948::I2C_ReadOneByte(uint8_t reg) {
  uint8_t buf;
  i2c_write_blocking(I2C_PORT, I2C_ADD_ICM20948, &reg, 1, true);
  i2c_read_blocking(I2C_PORT, I2C_ADD_ICM20948, &buf, 1, false);
  return buf;
}

void ICM20948::I2C_WriteOneByte(uint8_t reg, uint8_t value) {
  uint8_t buf[] = { reg, value };
  i2c_write_blocking(I2C_PORT, I2C_ADD_ICM20948, buf, 2, false);
}

void ICM20948::imuInit(IMU_EN_SENSOR_TYPE *penMotionSensorType) {
  bool bRet = false;

#if 0
  printf("\nI2C Bus Scan\n");
  printf("   0  1  2  3  4  5  6  7  8  9  A  B  C  D  E  F\n");
  for (int addr = 0; addr < (1 << 7); ++addr) {
    if (addr % 16 == 0) {
      printf("%02x ", addr);
    }

    //	   Perform a 1-byte dummy read from the probe address. If a slave
    //	   acknowledges this address, the function returns the number of bytes
    //	   transferred. If the address byte is ignored, the function returns
    //	   -1.
    //
    //	   Skip over any reserved addresses.
    int     ret;
    uint8_t rxdata;
    if (reserved_addr(addr))
      ret = PICO_ERROR_GENERIC;
    else
      ret = i2c_read_blocking(I2C_PORT, addr, &rxdata, 1, false);

    printf(ret < 0 ? "." : "@");
    printf(addr % 16 == 15 ? "\n" : "  ");
  }
  printf("Done.\n");
#endif

  bRet = icm20948Check();
  if (true == bRet) {
    *penMotionSensorType = IMU_EN_SENSOR_TYPE_ICM20948;
    icm20948init();
  }
  else {
    *penMotionSensorType = IMU_EN_SENSOR_TYPE_NULL;
  }
  q0 = 1.0f;
  q1 = 0.0f;
  q2 = 0.0f;
  q3 = 0.0f;
}

void ICM20948::icm20948init() {

  /* user bank 0 register */
  I2C_WriteOneByte(REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_0);
  I2C_WriteOneByte(REG_ADD_PWR_MIGMT_1, REG_VAL_ALL_RGE_RESET);
  sleep_ms(10);
  I2C_WriteOneByte(REG_ADD_PWR_MIGMT_1, REG_VAL_RUN_MODE);

  /* user bank 2 register */
  I2C_WriteOneByte(REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_2);
  I2C_WriteOneByte(REG_ADD_GYRO_SMPLRT_DIV, 0x08);
  I2C_WriteOneByte(REG_ADD_GYRO_CONFIG_1, REG_VAL_BIT_GYRO_DLPCFG_6
                                            | REG_VAL_BIT_GYRO_FS_2000DPS
                                            | REG_VAL_BIT_GYRO_DLPF);
  I2C_WriteOneByte( REG_ADD_ACCEL_SMPLRT_DIV_1,  0x00);  // 119 Hz
  I2C_WriteOneByte( REG_ADD_ACCEL_SMPLRT_DIV_2,  0x08);
  I2C_WriteOneByte(REG_ADD_ACCEL_CONFIG, REG_VAL_BIT_ACCEL_DLPCFG_6
                                           | REG_VAL_BIT_ACCEL_FS_4g
                                           | REG_VAL_BIT_ACCEL_DLPF);


  /* user bank 0 register */
  I2C_WriteOneByte(REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_0);

  sleep_ms(100);
  /* offset */
  icm20948GyroOffset();

  icm20948MagCheck();

  icm20948WriteSecondary(I2C_ADD_ICM20948_AK09916 | I2C_ADD_ICM20948_AK09916_WRITE,
                         REG_ADD_MAG_CNTL2, REG_VAL_MAG_MODE_20HZ);
}
